cmake_minimum_required(VERSION 3.5)
project(teensy_x86_encoder_stubs_root C CXX)
if (PROJECT_IS_TOP_LEVEL)
    set(BUILD_EXAMPLES On)
endif ()
include(cmake_declare_and_fetch.cmake.in)
DeclareAndFetch(teensy_x86_stubs https://github.com/newdigate/teensy-x86-stubs.git main src)
add_subdirectory(src)
if (BUILD_EXAMPLES)
    add_subdirectory(examples/basic)
endif ()